@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-08-07T08:17:30Z",
-  "count_outdated" : 436,
-  "uniques_outdated" : 252,
-  "count" : 473,
-  "uniques" : 270,
+  "timestamp" : "2022-08-08T01:22:55Z",
+  "count_outdated" : 438,
+  "uniques_outdated" : 253,
+  "count" : 476,
+  "uniques" : 271,
   "clones" : [
-    {
-      "timestamp": "2022-07-24T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-25T00:00:00Z",
       "count": 3,
@@ -102,6 +95,13 @@
       "count_minmax": [ 1, 4 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
+    },
+    {
+      "timestamp": "2022-08-07T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
