@@ -1,12 +1,7 @@
 {
-  "count": 37,
+  "count": 38,
   "uniques": 5,
   "clones": [
-    {
-      "timestamp": "2022-07-24T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-07-25T00:00:00Z",
       "count": 3,
@@ -71,6 +66,11 @@
       "timestamp": "2022-08-06T00:00:00Z",
       "count": 4,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-08-07T00:00:00Z",
+      "count": 2,
+      "uniques": 1
     }
   ]
 }
